scrollspy is broken migrated bs paddings margins migrated bs font helper classes migrated bs text align helper classes add back jquery and easing for now fixed some wraps and rm duplicate content in p3

--- a/css/styles.css
+++ b/css/styles.css
@@ -4236,9 +4236,9 @@ fieldset:disabled .btn {
   }
 }
 
-.nav-link:hover,
+/* .nav-link:hover,
 .nav-link:focus {
-  color: var(--bs-nav-link-hover-color);
+  color: var(--bs-nav-link-hover-color); */
 }
 
 .nav-link.disabled {
@@ -4266,10 +4266,10 @@ fieldset:disabled .btn {
   border-top-right-radius: var(--bs-nav-tabs-border-radius);
 }
 
-.nav-tabs .nav-link:hover,
+/* .nav-tabs .nav-link:hover,
 .nav-tabs .nav-link:focus {
   isolation: isolate;
-  border-color: var(--bs-nav-tabs-link-hover-border-color);
+  border-color: var(--bs-nav-tabs-link-hover-border-color); */
 }
 
 .nav-tabs .nav-link.disabled,
@@ -4348,7 +4348,7 @@ fieldset:disabled .btn {
   --bs-navbar-color: rgba(0, 0, 0, 0.55);
   --bs-navbar-hover-color: rgba(0, 0, 0, 0.7);
   --bs-navbar-disabled-color: rgba(0, 0, 0, 0.3);
-  --bs-navbar-active-color: rgba(0, 0, 0, 0.9);
+  /* --bs-navbar-active-color: rgba(0, 0, 0, 0.9); */
   --bs-navbar-brand-padding-y: 0.3125rem;
   --bs-navbar-brand-margin-end: 1rem;
   --bs-navbar-brand-font-size: 1.25rem;
@@ -4407,9 +4407,9 @@ a:-webkit-any-link {
   --bs-nav-link-padding-x: 0;
   --bs-nav-link-padding-y: 0.5rem;
   --bs-nav-link-font-weight: ;
-  --bs-nav-link-color: var(--bs-navbar-color);
-  --bs-nav-link-hover-color: var(--bs-navbar-hover-color);
-  --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
+  /* --bs-nav-link-color: var(--bs-navbar-color); */
+  /* --bs-nav-link-hover-color: var(--bs-navbar-hover-color);
+  --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color); */
   display: flex;
   flex-direction: column;
   padding-left: 0;
@@ -4417,9 +4417,9 @@ a:-webkit-any-link {
   list-style: none;
 }
 
-.navbar-nav .show>.nav-link,
+/* .navbar-nav .show>.nav-link,
 .navbar-nav .nav-link.active {
-  color: var(--bs-navbar-active-color);
+  color: var(--bs-navbar-active-color); */
 }
 
 .navbar-nav .dropdown-menu {
@@ -12878,6 +12878,7 @@ a:hover {
   outline: none;
   background-color: transparent;
 }
+
 
 #mainNav .navbar-nav .nav-item:active,
 #mainNav .navbar-nav .nav-item:focus {
